source/css/scss/objects/_header.scss
/* ... */
// Header
.a-header {
  height: $spacer * 8;
  padding-top: $spacer * 2;
  margin-bottom: $spacer;

  @include media-breakpoint-up( md ) {
    height: $spacer * 9;
    padding-top: $spacer * 3;
  }

  @include media-breakpoint-up( lg ) {
    margin-bottom: $spacer * 3;
  }

  &.a-compact {
    height: $spacer * 6;

    @include media-breakpoint-up( md ) {
      height: $spacer * 9;
    }
  }

  >.container {
    @include media-breakpoint-down( md ) {
      padding: 0 $spacer;
    }
  }

  .a-logo {
    float: left;
    max-width: 110px;
    margin-top: -2px;
    margin-right: $spacer;

    @include media-breakpoint-up( lg ) {
      max-width: 142px;
      margin-top: 0;
    }
  }

  .a-dropdown-languages,
  .a-dropdown-personswitchList {
    position: absolute;
    top: 57px;
    left: auto;
    width: 320px;

    @include media-breakpoint-up( sm ) {
      width: 420px;
    }
  }

  .a-dropdown-languages {
    right: -90px;
    padding: 0;

    @include media-breakpoint-up( sm ) {
      top: 55px;
      right: -38px;
    }
    @include media-breakpoint-up( md ) {
      right: -20px;
    }

    @include media-breakpoint-up( lg ) {
      right: -24px;
    }

    @include media-breakpoint-up( xl ) {
      right: -13px;
    }

    &.a-dropdownTriangle {
      &::after {
        right: 79px;
        left: auto;

        @include media-breakpoint-up( md ) {
          right: 8px;
        }
        @include media-breakpoint-up( lg ) {
          right: 12px;
        }
      }
    }
  }

  .a-dropdown-personswitchList {
    right: 0;
    width: 100%;
    @include media-breakpoint-up( sm ) {
      top: 55px;

    }
    @include media-breakpoint-up( md ) {
      top: 55px;
      right: -3px !important;
      width: 420px;
    }

    &.a-dropdownTriangle {
      &::after {
        right: 1px;
        left: auto;

        @include media-breakpoint-up( md ) {
          right: 3px;
        }
      }
    }
  }
}

// Header options
.a-header-options {
  float: right;
  margin-top: -10px;

  @include media-breakpoint-up( md ) {
    left: auto;
    margin-top: -7px;
  }

  @include media-breakpoint-up( lg ) {
    margin-top: -6px;
  }

  .nav-link {
    padding: $spacer 8px 10px 8px;
    border-radius: 0;

    @include media-breakpoint-up( sm ) {
      padding: 13px 8px 10px 8px;
    }

    @include media-breakpoint-up( md ) {
      padding: 10px 8px 10px 8px;
    }

    @include media-breakpoint-up( lg ) {
      padding: 10px;
    }

    &:focus,
    &:active {
      color: $blue-dark;
      border-color: $blue-dark;
    }
  }

  // Language switcher (Button)
  .a-languageSwitcher {
    @extend .a-fontSizeXXS;
    @include a-fontMedium;
    position: absolute;
    right: 18px;
    color: $blue-dark;
    cursor: pointer;
    background: transparent;
    border: none;

    @include media-breakpoint-up( sm ) {
      position: relative;
      right: 0;
    }
    @include media-breakpoint-up( md ) {
      padding-right: 0;
      padding-bottom: 0;
      padding-left: 0;
      margin-top: 1px;
      margin-right: $spacer;
      border-bottom: 1px solid $blue-dark;
    }

    @include media-breakpoint-up( xl ) {
      margin-right: $spacer * 2;
    }

    &:focus {
      &::before {
        position: absolute;
        top: -7px;
        left: -18px;
        width: calc(100% + 36px);
        height: calc(100% + 24px);
        content: ' ';
        background: $black-opacity-01;
        border: none;
        border-radius: 50px;
      }
    }

    &:hover,
    &:focus,
    &:active {
      border-bottom: 1px solid $blue-dark;
    }

    i {
      @include a-fontSize30;
      vertical-align: middle;
    }

    &::after {
      display: none;

      @include media-breakpoint-up( md ) {
        display: inline-block;
        margin-left: 0;
      }
    }
  }

  .a-personSwitcher {
    padding-right: $spacer;

    @include media-breakpoint-up( sm ) {
      padding-right: $spacer;
      margin-right: -$spacer;
    }

    @include media-breakpoint-up( md ) {
      padding-left: $spacer;
    }

    @include media-breakpoint-up( lg ) {
      padding-left: $spacer * 2;
    }
  }
}

// Person switcher (Button)
.a-personSwitcher {
  @extend .a-fontSizeXXS;
  @include a-fontMedium;
  position: absolute;
  right: 0;
  margin-top: -7px;
  color: $blue-dark;
  text-align: right;
  cursor: pointer;
  background: transparent;
  border: none;

  @include media-breakpoint-up( sm ) {
    position: relative;
    right: 0;
  }

  &::after {
    display: none;
  }

  &:focus {
    background: $black-opacity-01;
    border-color: $blue-darker;
    border-radius: 50px;
  }

  &:hover,
  &:focus,
  &:active {
    color: $blue-dark;
    border: none;
  }

  &.search-header {
    color: $white;

    &:hover,
    &:focus,
    &:active {
      color: $white !important;
    }

    .a-personSwitcher-icon {
      color: $white;
    }
  }

  &.subheader-dark {
    color: $black;

    &:hover,
    &:focus,
    &:active {
      color: $black !important;
    }

    .a-personSwitcher-icon {
      color: $black;
    }
  }

  .a-personSwitcher-name {
    display: none;
    max-width: 90px;
    overflow: hidden !important;
    text-align: right;
    text-overflow: ellipsis;
    white-space: nowrap;
    vertical-align: middle;

    @include media-breakpoint-up( sm ) {
      display: inline-block;
    }
    @include media-breakpoint-up( lg ) {
      max-width: 120px;
    }
    @include media-breakpoint-up( xl ) {
      max-width: 220px;
    }

    span {
      overflow: hidden !important;
      text-overflow: ellipsis;
    }
  }

  .a-personSwitcher-icon {
    display: inline-flex;
    height: 36px;
    margin-left: 3px;
    line-height: 1;
    color: $blue-dark;

    @include media-breakpoint-up( md ) {
      margin-top: 0;
    }

    &::before {
      align-self: center;
    }
  }
}
/* ... */

